# wroblewshop

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
prototype/: build.py
prototype/templates/: _base.html  _page-full-width.html  _page-two-third-width.html  add-meal.html  add-store-deleted-item.html  add-store.html  add-sundry.html  app.css  check-store.html  check-sundries.html  home-1.html  home.html  index.html  list-view.html  review-list.html
src/wroblewshop/: __init__.py  auth.py  config.py  home.py  start.py
src/wroblewshop/domain/: cupboard.py  item.py  user.py
src/wroblewshop/infrastructure/: __init__.py  cupboard.py  user.py
src/wroblewshop/infrastructure/migrations/: env.py
src/wroblewshop/infrastructure/migrations/versions/: 9aea673aeeac_add_user_table.py  e9c97ae0d208_add_cupboard_table.py  f9c8318fbf5c_add_item_table.py
src/wroblewshop/templates/: _base.html  forbidden.html  home.html  start.html
src/wroblewshop/views/: api.py  auth.py  home.py  item.py  items.py  start.py
src/wroblewshop/views/assets/: app.css
src/wroblewshop/views/templates/: _base.html  _page-two-third-width.html  add-item.html  home.html  start.html
tests/e2e/: app_client.py  conftest.py  pages.py  test_add_item.py  test_home.py  test_item.py  test_start.py
tests/e2e/oidc_server/: app.py  clients.py  grants.py  jwts.py  resources.py  tokens.py  web_client.py
tests/integration/: conftest.py  fakes.py  pages.py  test_add_item.py  test_api.py  test_auth.py  test_home.py  test_item.py  test_start.py
tests/unit/: test_api.py
tests/unit/domain/: test_cupboard.py  test_item.py  test_user.py
tests/unit/infrastructure/: conftest.py  test_cupboard.py  test_user.py
tests/unit/views/: test_home.py  test_item.py  test_items.py
