[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wroblewshop"
authors = [{name = "Alex Coleman", email = "hello@alexjcoleman.me"}]
description = "A shopping list app"
version = "0.1.0"

dependencies = [
    "Flask~=3.0.0"
]

[project.optional-dependencies]
dev = [
    "black~=24.2.0",
    "isort~=5.13.0",
    "mypy~=1.10.0",
    "playwright~=1.44.0",
    "pytest~=8.2.0",
    "pytest-flask~=1.3.0",
    "pytest-playwright~=0.5.0",
    "ruff~=0.4.0",
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "pytest_flask.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
live_server_scope = "package"
addopts = "--screenshot only-on-failure"
