[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wroblewshop"
authors = [{name = "Alex Coleman", email = "hello@alexjcoleman.me"}]
description = "A shopping list app"
version = "0.1.0"

dependencies = [
    "authlib~=1.3.0",
    "Flask~=3.0.0",
    "flask-session[sqlalchemy]~=0.8.0",
    "gunicorn~=23.0.0",
    "python-dotenv~=1.0.0",
    "requests~=2.32.0"
]

[project.optional-dependencies]
dev = [
    "black~=24.8.0",
    "beautifulsoup4~=4.12.0",
    "isort~=5.13.0",
    "mypy~=1.11.0",
    "playwright~=1.46.0",
    "pytest~=8.3.0",
    "pytest-flask~=1.3.0",
    "pytest-playwright~=0.5.0",
    "ruff~=0.4.0",
    "types-beautifulsoup4~=4.12.0",
    "types-requests~=2.32.0"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "flask_session.*",
    "pytest_flask.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
live_server_scope = "package"
addopts = "--screenshot only-on-failure"
